# Uranium-Shell-ush

./: .clang-format  .gitignore  CMakeLists.txt  CmakeLists.txt  Makefile  README.md
include/: ush.h
src/: cli.c  execute.c  global.c  lexer.c  main.c  parser.c  style.c
